[package]
name             = "bittorrent"
version          = "0.2.0"
description      = "Bittorrent Client And Library Written In Rust, Using bip-rs"

authors          = ["Andrew <amiller4421@gmail.com>"]

homepage         = "https://github.com/GGist/bittorrent"
repository       = "https://github.com/GGist/bittorrent"
documentation    = "https://docs.rs/bittorrent/"

keywords         = ["bittorrent"]

license          = "MIT/Apache-2.0"